1.20 to 26.1.2 support (wip) bug fixes, new menus, timed acces, best log, etc